# single_quartet_check

./: .gitignore  CMakeLists.txt  README.md  README.txt
example_data/: 59.phy.raxml.bestTree  59_multiSPAM_quartets.txt  59_unaligned.fasta
src/: main.cpp  quartet_topology_checker.cpp  quartet_topology_checker.hpp  tree_information.cpp  tree_information.hpp
